fourth commit - layout issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,8 +11,10 @@
 }
 
 html, body {
-  height: auto;
+  height: 100%;
   overflow-y: auto;
+  margin: 0;
+  padding: 0;
 }
 
 
